--- a/01-debating/01-debating.tex
+++ b/01-debating/01-debating.tex
@@ -25,51 +25,51 @@
 \newcommand*\thetitle{Debating While Coding}
 \begin{document}
 
-\plush{\osbpTitlePage{1}{jYeZuaLt7nI}}
+\plush{\lnTitlePage{1}{8}{jYeZuaLt7nI}}
 
-\thought[bugayenko2015blog1222]{Open source must be \ul{the only} way for you to write code.}
+\lnThought[bugayenko2015blog1222]{Open source must be \ul{the only} way for you to write code.}
 
-\qte
+\lnQuote
   [\nospell{Naveen Raman}]
   {naveen-raman}
   {Among the many reasons to contribute to open source, building one's professional \ul{reputation} and signaling one's skills to potential employers are common ones.}
   {raman2020stress}
 
-\qte
+\lnQuote
   {david-mytton}
   {When individuals release open source projects, their motivations are often \ul{altruistic}. However, the best companies are not open sourcing things for the altruism. There are real, \ul{strategic reasons} hidden behind the warm and fuzzy glow of open source.}
   {mytton2016}
 
-\thought{Be fully prepared for the toxicity of open source terrain.}
+\lnThought{Be fully prepared for the toxicity of open source terrain.}
 
-\qte
+\lnQuote
   [\nospell{Yulia Tsvetkov}]
   {yulia-tsvetkov}
   {Toxic \ul{language} in open source can manifest in multiple ways, including hate speech and microaggressions found also elsewhere online (e.g., YouTube), but also through open-source-specific displays of \ul{entitlement} and \ul{urgency} related to timing expectations.}
   {raman2020stress}
 
-\qte
+\lnQuote
   [\nospell{Courtney Miller}]
   {courtney-miller}
   {Within open source, entitled and demeaning complaints, arrogance, and insults are common forms of \ul{toxicity}.}
   {miller2022did}
 
-\qte
+\lnQuote
   [\nospell{Isabella Ferreira}]
   {isabella-ferreira}
   {We conducted a qualitative analysis on 1,545 emails from the Linux Kernel Mailing List that were associated with rejected changes. We found that \ul{more than half} (67\%) of the non-technical emails included uncivil features. Particularly, frustration, name calling, and impatience are the most frequent features in uncivil emails. }
   {ferreira2021shut}
 
-\pitch{\includegraphics[width=.95\linewidth]{linus-email.png}}
+\lnPitch{\includegraphics[width=.95\linewidth]{linus-email.png}}
 
-\qte
+\lnQuote
   {karl-fogel}
   {Most \ul{free} software projects \ul{fail}.}
   {fogel2005producing}
 
-\thought[bugayenko2020blog0729]{Always \ul{start} your message with a nickname of the person who you are talking to.}
+\lnThought[bugayenko2020blog0729]{Always \ul{start} your message with a nickname of the person who you are talking to.}
 
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.7\linewidth]{discussion.png}
   \par\columnbreak\par
@@ -80,89 +80,89 @@
   \href{https://github.com/objectionary/eo/pull/2808}{objectionary/eo\#2808}
   \end{multicols}}
 
-\thought{In an argument, provide \ul{links} that support your point of view.}
+\lnThought{In an argument, provide \ul{links} that support your point of view.}
 
-\thought[bugayenko2020blog0729]{Beautify your profile, start with an anthropomorphic avatar.}
+\lnThought[bugayenko2020blog0729]{Beautify your profile, start with an anthropomorphic avatar.}
 
-\qte
+\lnQuote
   [\nospell{Kristine Nowak}]
   {kristine-nowak}
   {Avatars that were more \ul{anthropomorphic} were perceived to be more \ul{attractive} and \ul{credible}. The strongest predictor of these variables, however, was the degree of masculinity or femininity (lack of androgyny) of an avatar.}
   {nowak2005influence}
 
-\qte
+\lnQuote
   [\nospell{Josh Terrell}]
   {josh-terrell}
   {Surprisingly, our results show that women's contributions tend to be accepted \ul{more often} than men's. However, for contributors who are outsiders to a project and their gender is identifiable, men's acceptance rates are \ul{higher}.}
   {terrell2017gender}
 
-\qte
+\lnQuote
   [\nospell{Reza Nadri}]
   {reza-nadri}
   {We have identified that submitters perceptible as Hispanic and Black have 39\% of their pull requests rejected because they are seen as unnecessary, which is 10-12 percentage points more frequent than the rest of perceptible races.}
   {nadri2021insights}
 
-\qte
+\lnQuote
   [\nospell{Nasif Imtiaz}]
   {nasif-imtiaz}
   {We found that women did not provide more information on competence and were not generally measured at a stricter standard than men. We observed that women were less likely to express \ul{politeness} and \ul{profanity} than men, and were more restrictive in expressing their \ul{sentiments} on the platform.}
   {imtiaz2019investigating}
 
-\qte
+\lnQuote
   [\nospell{Carolyn D. Egelman}]
   {carolyn-egelman}
   {Being a \ul{new employee} is not a statistically significant predictor of any of our feelings of pushback. Compared to authors at level 1 (entry level), authors at level 3 are 28\% less likely to see conflict in their code review changes.}
   {egelman2020predicting}
 
-\pitch{\includegraphics[width=.75\linewidth]{monica.png}}
+\lnPitch{\includegraphics[width=.75\linewidth]{monica.png}}
 
-\thought[bugayenko2014blog1007]{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
+\lnThought[bugayenko2014blog1007]{Stay in the ticket, don't escape to Telegram, Slack, or an office debate.}
 
-\qte
+\lnQuote
   [Ben Balter]
   {ben-balter}
   {You essentially \ul{never} ``walk over'' to a coworker's desk, virtual or otherwise. Whenever possible, prefer issues and chat, to ``just in time'' communications.}
   {balter2014rules}
 
-\qte
+\lnQuote
   {mark-warschauer}
   {The findings showed a tendency toward \ul{more equal} participation in computer mode. Students used language which is lexically and syntactically \ul{more formal} and complex in electronic discussion than they did in face-to-face discussion, thus demonstrating another possible advantage of computer-mediated communication.}
   {warschauer1995comparing}
-\pitch{\includegraphics[width=\linewidth]{face-to-face.png}}
+\lnPitch{\includegraphics[width=\linewidth]{face-to-face.png}}
 
-\qte
+\lnQuote
   [\nospell{Verena Ebert}]
   {verena-ebert}
   {Developers use many channels. Previously, mailing lists were very common. Nowadays, other communication channels become more and more popular, for example, Slack, issue trackers, Twitter or Gitter.}
   {ebert2022communication}
-\pitch{
+\lnPitch{
   \includegraphics[width=.9\linewidth]{channels.png}
   \par
   More about it: \bibentry{bugayenko2016blog0823}}
 
-\thought{Be aware of robots!}
+\lnThought{Be aware of robots!}
 
-\qte
+\lnQuote
   [\nospell{Natarajan Chidambaram}]
   {natarajan-chidambaram}
   {Collaborative software development through GitHub repositories frequently relies on bot accounts to automate repetitive and error-prone tasks. This highlights the need to have accurate and efficient bot identification tools.}
   {chidambaram2024rabbit}
 
-\thought[bugayenko2020blog0729]{Be polite, especially when you are angry or disagree.}
+\lnThought[bugayenko2020blog0729]{Be polite, especially when you are angry or disagree.}
 
-\qte
+\lnQuote
   [\nospell{Xuan Lu}]
   {xuan-lu}
   {Developers who use \ul{emojis} in their posts are significantly less likely to \ul{dropout} from the online work platform.}
   {lu2022emojis}
 
-\qte
+\lnQuote
   [\nospell{Thomas Fackler}]
   {thomas-fackler}
   {Our results show that there is \ul{gravity} in online collaborations on GitHub. Traditional determinants of international trade such as \ul{language barriers} and \ul{country borders} matter for international code contributions.}
   {fackler2020gravity}
 
-\qte
+\lnQuote
   {nadzeya-laurentsyeva}
   {The \ul{conflict} exerted a strong and persistent negative effect on the overall
   Ukrainian-Russian collaboration as measured by Ukrainian contributions
@@ -171,13 +171,13 @@
   on collaborating with Russians, they contribute to \ul{fewer} Russian projects.}
   {laurentsyeva2019friends}
 
-\qte
+\lnQuote
   [\nospell{Justin Middleton}]
   {justin-middleton}
   {While we indeed find support for the idea that increases in activity correlate with a higher probability for membership, we also found the particular cases for which more activity can reduce the probability. This underscores the notion that software collaboration is much more than the code itself and that the social components of software should not be undervalued by software teams.}
   {middleton2018contributions}
 
-\qte
+\lnQuote
   {pope-francis}
   {Pope Francis offered some Valentine’s Day advice Friday for a lasting marriage, telling 25,000 \ul{lovebirds} that the recipe for success lies in saying three simple words: `\ul{Please}, \ul{thanks} and \ul{sorry}.'{}}
   {pope2014}
