--- a/05-setting-guidelines/05-setting-guidelines.tex
+++ b/05-setting-guidelines/05-setting-guidelines.tex
@@ -25,17 +25,17 @@
 \newcommand*\thetitle{Setting Guidelines}
 \begin{document}
 
-\plush{\osbpTitlePage{5}{mWi2S5FJiJ4}}
+\plush{\lnTitlePage{5}{8}{mWi2S5FJiJ4}}
 
-\thought{Have \ff{LICENSE.txt} file with an MIT license in your repository}
+\lnThought{Have \ff{LICENSE.txt} file with an MIT license in your repository}
 
-\qte
+\lnQuote
   [Arnoud Engelfriet]
   {arnoud-engelfriet}
   {Perhaps the \ul{most difficult} issue when setting up the project is which license to choose... No one will contribute code just because it's GPL or BSD. But with the \ul{wrong license}, your chances of a successful open source release are slim.}
   {engelfriet2009choosing}
 
-\qte
+\lnQuote
   [Richard Stallman]
   {richard-stallman}
   {\textbf{copyleft}: Everyone will be permitted to modify and redistribute GNU, but no distributor will be allowed to restrict its further redistribution. That is to say, \ul{proprietary} modifications will \ul{not be allowed}. I want to make sure that all versions of GNU remain free.}
@@ -61,19 +61,19 @@
   \item Permission to \ul{not mention} the product
   \item Permission to \ul{remove copyright notice}
   \end{itemize}
-  \source{lin2006open}}
-\pitch{\includegraphics[width=.6\linewidth]{openness.png}
-  \source{lin2006open}}
+  \lnSource{lin2006open}}
+\lnPitch{\includegraphics[width=.6\linewidth]{openness.png}
+  \lnSource{lin2006open}}
 
-\qte
+\lnQuote
   [Ben Balter]
   {ben-balter}
   {Unsurprisingly, \ul{MIT}, \ul{Apache}, and \ul{GPL} are the clear front runners, with some 15\% of licensed projects opting for a non-standard license.}
   {github2015licenses}
-\pitch{\includegraphics[width=.7\linewidth]{licenses.png}
-  \source{github2015licenses}}
+\lnPitch{\includegraphics[width=.7\linewidth]{licenses.png}
+  \lnSource{github2015licenses}}
 
-\thought[bugayenko2019blog0423]{Make the \ff{README.md} file attractive}
+\lnThought[bugayenko2019blog0423]{Make the \ff{README.md} file attractive}
 
 \plush{\pptBanner{Mandatory sections of \ff{README.md}:}
   \begin{itemize}\setlength\itemsep{0em}
@@ -83,49 +83,49 @@
   \item How to contribute?
   \item Who is who?
   \end{itemize}
-  \source{bugayenko2019blog0423}}
+  \lnSource{bugayenko2019blog0423}}
 
-\qte
+\lnQuote
   [Gede Artha Azriadi Prana]
   {gede-prana}
   {We conduct a qualitative study involving the manual annotation of 4,226 README file sections from 393 randomly sampled GitHub repositories. We find that information discussing the `What' and `How' of a repository is very common, while many README files lack information regarding the \ul{purpose} and \ul{status} of a repository.}
   {prana2019categorizing}
 
-\qte
+\lnQuote
   [Simon Weber]
   {simon-weber}
   {Upon investigation, popular projects were found to have larger READMEs (median 2 kilobytes vs. 500 bytes). Also, 95\% of popular projects have nonempty READMEs, compared to only 65\% of unpopular projects.}
   {weber2014makes}
-\pitch{\includegraphics[width=.75\linewidth]{readme-size.png}
-  \source{weber2014makes}}
+\lnPitch{\includegraphics[width=.75\linewidth]{readme-size.png}
+  \lnSource{weber2014makes}}
 
-\qte
+\lnQuote
   [\nospell{Asher Trockman}]
   {asher-trockman}
   {We find that non-trivial \ul{badges}, which display the build status, test coverage, and up-to-dateness of dependencies, are mostly reliable signals, correlating with more tests, better pull requests, and fresher dependencies.}
   {trockman2018adding}
 
-\qte
+\lnQuote
   [\nospell{Shaowei Wang}]
   {shaowei-wang}
   {The frequency/number of readme \ul{updates} and the number of \ul{lists} and \ul{links} positively correlate with the likelihood of a repository being popular.}
   {wang2023study}
 
-\thought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
+\lnThought[bugayenko2014blog0721]{Make the \ff{master} branch read-only}
 
-\thought{Put \ff{CODE\_OF\_CONDUCT.md} file to your repository... not}
+\lnThought{Put \ff{CODE\_OF\_CONDUCT.md} file to your repository... not}
 
-\qte
+\lnQuote
   [Parastou Tourani]
   {parastou-tourani}
   {We found that the top codes of conduct are adopted by hundreds to thousands of projects, while all of them share five common dimensions.}
   {tourani2017code}
-\pitch{\includegraphics[width=.8\linewidth]{codes.png}
-  \source{tourani2017code}}
-\pitch{
+\lnPitch{\includegraphics[width=.8\linewidth]{codes.png}
+  \lnSource{tourani2017code}}
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.9\linewidth]{dimensions.png}
-  \source{tourani2017code}
+  \lnSource{tourani2017code}
   \par\columnbreak\par
   ``The Contributor Covenant explicitly mentions sexualized language or imagery, trolling, insulting and publishing of private information of others as unexpected behaviors. Django adds discriminatory jokes and violent threats to this list. Geek Feminism and the Open code of conduct provide a more detailed list, ...''
   \end{multicols}}
@@ -133,43 +133,43 @@
 \plush{\pptBanner{Django Code of Conduct}
   ``We strive to be a community that welcomes and supports people of \ul{all} backgrounds and identities. This includes, but is not limited to members of any race, ethnicity, culture, national origin, colour, immigration status, social and economic class, educational level, sex, sexual orientation, gender identity and expression, age, size, family status, \ul{political belief}, religion, and mental and physical ability.''}
 
-\qte
+\lnQuote
   [Hana Frluckaj]
   {hana-frluckaj}
   {Even though including a code of conduct is considered a \ul{best practice} recommendation to \ul{attract} newcomers, there is, as of yet, no \ul{empirical} evidence backing up that claim.}
   {li2021code}
 
-\qte
+\lnQuote
   [Dabbish Laura]
   {dabbish-laura}
   {We found that projects in our sample \ul{did not} extensively discuss the addition or changes to the code of conduct.}
   {li2021code}
 
-\qte
+\lnQuote
   [Jack Jamieson]
   {jack-jamieson}
   {We found multiple significant relationships between value-related discussions and turnover, including that discussions about \ul{respectfulness} predict an increase in contributors leaving and a decrease in new contributors, while discussions about \ul{social power} predicted better contributor retention.}
   {jamieson2023predicting}
 
-\thought{Don't explain coding guidelines, setup GitHub Action checks}
+\lnThought{Don't explain coding guidelines, setup GitHub Action checks}
 
-\qte
+\lnQuote
   [Timothy Kinsman]
   {timothy-kinsman}
   {We analyzed the effect of adoption across 926 projects that had adopted GitHub Actions for at least 6 months. Our findings indicate that, on average, there are \ul{more rejected pull requests} and fewer commits on merged pull requests after adopting GitHub Actions.}
   {kinsman2021software}
 
-\qte
+\lnQuote
   [Alexandre Decan]
   {alexandre-decan}
   {We observed that workflows tend to be used in the \ul{more active} GitHub projects (more contributors, pull requests, commits and issues).}
   {decan2022use}
-\pitch{\includegraphics[width=.6\linewidth]{by-language.png}
-  \source{decan2022use}}
-\pitch{\includegraphics[width=.75\linewidth]{by-metrics.png}
-  \source{decan2022use}}
+\lnPitch{\includegraphics[width=.6\linewidth]{by-language.png}
+  \lnSource{decan2022use}}
+\lnPitch{\includegraphics[width=.75\linewidth]{by-metrics.png}
+  \lnSource{decan2022use}}
 
-\pitch{Check this repo for inspiration: \href{https://github.com/sdras/awesome-actions}{sdras/awesome-actions} (a curated list of GitHub Action plugins for different purposes).}
+\lnPitch{Check this repo for inspiration: \href{https://github.com/sdras/awesome-actions}{sdras/awesome-actions} (a curated list of GitHub Action plugins for different purposes).}
 
 \plush{\pptBanner{Some exotic GitHub Action plugins:}
   \begin{itemize}\setlength\itemsep{0em}
