--- a/08-gaining-popularity/08-gaining-popularity.tex
+++ b/08-gaining-popularity/08-gaining-popularity.tex
@@ -25,9 +25,9 @@
 \newcommand*\thetitle{Gaining Popularity}
 \begin{document}
 
-\plush{\osbpTitlePage{8}{}}
+\plush{\lnTitlePage{8}{8}{_qrTcAv7ia8}}
 
-\pitch{
+\lnPitch{
   \pptBanner{A quick recap of the previous lectures:}
   \begin{enumerate}[label=L\arabic*:]
     \setlength\itemsep{0em}
@@ -40,83 +40,83 @@
     \item Make frequent SemVer \ul{releases}
   \end{enumerate}}
 
-\qte
+\lnQuote
   [\nospell{Andre Hora}]
   {andre-hora}
   {We found that general models, i.e., models produced using the top GitHub repositories, start to provide \ul{accurate predictions} when they are trained with data from six months and used to predict the number of stars six months ahead.}
   {borges2016predicting}
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{diff.png}
-  \source{borges2016predicting}
+  \lnSource{borges2016predicting}
   \par\columnbreak\par
   \includegraphics[width=\linewidth]{trends.png}
   \includegraphics[width=\linewidth]{clusters.png}
   \end{multicols}}
 
-\qte
+\lnQuote
   [\nospell{Marco Tulio Valente}]
   {marco-tulio-valente}
   {We report that three out of four developers consider the \ul{number of stars} before using or contributing to a GitHub project.}
   {borges2018s}
 
-\qte
+\lnQuote
   [\nospell{Felipe Fronchetti}]
   {felipe-fronchetti}
   {We found that \ul{popularity} of the project (in terms of stars), time to review pull requests, project age, and programming languages are the factors that best explain the newcomers' growth patterns.}
   {fronchetti2019attracts}
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.8\linewidth]{ranking.png}
-  \source{fronchetti2019attracts}
+  \lnSource{fronchetti2019attracts}
   \par\columnbreak\par
   ``Popularity of the project (in terms of stars), time to review pull requests, and project characteristics like age and programming languages are the factors that best explain the newcomers' growth patterns. In addition, GitHub recommended community standards have a lower influence on the observed growth patterns.''
   \end{multicols}}
 
-\thought{Put some badges.}
+\lnThought{Put some badges.}
 
-\pitch{
+\lnPitch{
   \includegraphics[width=.6\linewidth]{eo-badges.png}
   \par\url{https://github.com/objectionary/eo}}
 
-\qte
+\lnQuote
   [\nospell{Asher Trockman}]
   {asher-trockman}
   {A vast majority (88\%) agree with the statement `I consider the presence of badges in general to be an indicator of project \ul{quality}.'}
   {trockman2018adding}
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.9\linewidth]{downloads.png}
   \par\columnbreak\par
   ``Packages with \ul{many badges} tend to have \ul{fewer downloads}. The effect for less popular packages is negligible.''
-  \source{trockman2018adding}
+  \lnSource{trockman2018adding}
   \end{multicols}}
 
-\thought{Keep the momentum.}
+\lnThought{Keep the momentum.}
 
-\qte
+\lnQuote
   [\nospell{Hudson Borges}]
   {hudson-borges}
   {We concluded that repositories have a tendency to receive more stars right after their \ul{first public release}. After this period, for half of the repositories the growth rate tends to stabilize.}
   {borges2016popularity}
 
-\qte
+\lnQuote
   [\nospell{Fang Hongbo}]
   {fang-hongbo}
   {We note a sizeable group of people who \ul{follow} others on GitHub and \ul{tweet} about these people’s work, but do not otherwise contribute to those open-source projects.}
   {fang2020need}
 
-\thought{Keep it up.}
+\lnThought{Keep it up.}
 
-\qte
+\lnQuote
   [\nospell{Tony Ammeter}]
   {tony-ammeter}
   {It appears that \ul{vitality} has a significant effect on popularity over time, indicating that the more active a project is in terms of posting new \ul{releases} and making \ul{announcements}, the more attention it receives from the community.}
   {stewart2002exploratory}
 
-\thought{Make some noise.}
+\lnThought{Make some noise.}
 
-\pitch{
+\lnPitch{
   \pptBanner{Some Places to Announce:}
   \begin{itemize}\setlength\itemsep{0em}
     \item \href{https://www.reddit.com/r/programming/}{Reddit}
@@ -128,20 +128,20 @@
     \item Your blog
   \end{itemize}}
 
-\qte
+\lnQuote
   [\nospell{Marco Tulio Valente}]
   {marco-tulio-valente}
   {We reveal that \ul{Twitter}, \ul{user meetings}, and \ul{blogs} are the most common promotion channels used by the studied projects.}
   {borges2019developers}
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=\linewidth]{channels.png}
-  \source{borges2019developers}
+  \lnSource{borges2019developers}
   \par\columnbreak\par
   The Figure presents the most common promotion channels used by the top-100 projects on GitHub. The most common channel is Twitter, which is used by 56 projects. The second one is Users Meetings (41 projects), followed by Blogs (38 projects), Events (33 projects), and RSS feeds (33 projects).
   \end{multicols}}
 
-\qte
+\lnQuote
   [\nospell{Hemank Lamba}]
   {hemank-lamba}
   {We find that tweets have a statistically \ul{significant} and practically sizable effect on obtaining \ul{new stars} and a \ul{small} average effect on attracting \ul{new contributors}.}
