--- a/osbp.sty
+++ b/osbp.sty
@@ -23,88 +23,6 @@
 \NeedsTeXFormat{LaTeX2e}
 \ProvidesPackage{osbp}[00.00.0000 0.0.0 This Course Specials]
 
-\usepackage{silence}
-  \WarningFilter{bibentry}{You have used \nobibliography*}
-  \WarningFilter{breakurl}{You are using breakurl while processing via pdflatex.}
-
-\RequirePackage[T1]{fontenc}
-\RequirePackage[utf8]{inputenc}
-\RequirePackage[dry,increment]{crumbs}
-\RequirePackage[static]{clicks}
-\RequirePackage[template,scheme=light]{ppt-slides}
-\RequirePackage[nocn,noframes]{ffcode}
-\RequirePackage{calc}
-\RequirePackage{underscore}
-\RequirePackage{soul}
-\RequirePackage{doi}
-\RequirePackage{footmisc}
-\RequirePackage{booktabs}
-\RequirePackage{graphicx}
-\RequirePackage{href-ul}
-
-% see https://tex.stackexchange.com/a/256190/1449
-\RequirePackage{url}
-\def\UrlBreaks{\do\/\do-}
-\RequirePackage{breakurl}
-
-\newcommand\osbpTitlePage[2]{\begin{pptMiddle}%
-  \pptTitle{\thetitle}{}\par
-  {\scshape Yegor Bugayenko}\par
-  Lecture \##1 out of 8 \newline
-  80 minutes\par
-  \def\param{#2}%
-  \ifx\param\empty\else%
-    The slidedeck was presented by the author in this
-    \textcolor{red}{\href{https://www.youtube.com/watch?v=#2}{YouTube Video}}\par
-  \fi%
-\end{pptMiddle}}
-
-\newcommand\pitch[1]{\plush{\begin{pptMiddle} #1 \end{pptMiddle}}}
-\newcommand\qte[4][]{
-  \pitch{
-    \pptQuote
-      [\scriptsize\scshape\color{gray}{#1}]
-      {../faces/#2.jpg}
-      {#3}
-      {\color{gray}\rmfamily\scriptsize\bibentry{#4}}
-  }
-}
-\newcommand\source[1]{\par{\scriptsize\color{gray} Source: \bibentry{#1}\par}}
-
-\newcommand\nospell[1]{#1}
-
-\newcounter{thght}
-\newcommand\thought[2][]{
-  \addtocounter{thght}{1}
-  \plush{
-    \def\param{#1}%
-    \pptThought{
-      \raggedright\textcolor{orange}{\Huge\thethght.} #2%
-      \ifx\param\empty\else%
-        \footnotemark
-      \fi
-    }
-    \ifx\param\empty\else%
-      \footnotetext{\bibentry{#1}}
-    \fi%
-  }
-}
-
-\AtBeginDocument{%
-  \pptLeft{\thetitle{}}%
-  \pptRight{@yegor256}%
-  \nobibliography*
-  \bibliographystyle{plainnat}
-}
-
-\RequirePackage{bibentry}
-\RequirePackage{natbib}
-\AtEndDocument{%
-  \begin{multicols}{2}
-  \setlength{\bibsep}{.2em}
-  \renewcommand{\bibfont}{\scriptsize}
-  \bibliography{../bibliography/main}
-  \end{multicols}
-}
+\RequirePackage{../lecture-notes/notes}
 
 \endinput
