--- a/03-making-changes/03-making-changes.tex
+++ b/03-making-changes/03-making-changes.tex
@@ -25,51 +25,51 @@
 \newcommand*\thetitle{Making Changes}
 \begin{document}
 
-\plush{\osbpTitlePage{3}{D6CUW9eZ5yk}}
+\plush{\lnTitlePage{3}{8}{D6CUW9eZ5yk}}
 
-\qte
+\lnQuote
   [\nospell{\nospell{Bram Adams}}]
   {bram-adams}
   {We found that \ul{33\%} of the patches makes it into a Linux release, and that most of them need \ul{3 to 6 months} for this.}
   {jiang2013will}
 
-\thought[bugayenko2020blog0729]{Make small pull requests.}
+\lnThought[bugayenko2020blog0729]{Make small pull requests.}
 
-\qte
+\lnQuote
   [\nospell{Dabbish Laura}]
   {dabbish-laura}
   {Pull requests with many comments were much less likely to be accepted, moderated by the submitter's prior interaction in the project.}
   {tsay2014influence}
 
-\qte
+\lnQuote
   [\nospell{Yue Yu}]
   {yue-yu}
   {Our preliminary models show that pull request review latency is complex, and depends on many predictors. Naturally, the size of the pull request matters: the shorter it is the faster it will be reviewed.}
   {yu2015wait}
 
-\qte
+\lnQuote
   [\nospell{Amiangshu Bosu}]
   {amiangshu-bosu}
   {We found that the \ul{more files} that are in a change, the \ul{lower} the proportion of \ul{comments} in the code review that will be of value to the author of the change.}
   {bosu2015characteristics}
 
-\qte
+\lnQuote
   [\nospell{Caitlin Sadowski}]
   {caitlin-sadowski}
   {A correlation between \ul{change size} and \ul{review quality} is acknowledged by Google and developers are strongly encouraged to make small, incremental changes (with the exception of large deletions and automated refactoring).}
   {sadowski2018modern}
 
-\thought[bugayenko2020blog0729]{Don't group your changes.}
+\lnThought[bugayenko2020blog0729]{Don't group your changes.}
 
-\qte
+\lnQuote
   [\nospell{Carolyn D. Egelman}]
   {carolyn-egelman}
   {Google categorizes CRs into specific sizes, these sizes are indicated as part of the code review tool and in the notification to the reviewer of the code change... The general advice is to \ul{split} change requests for \ul{easier} and \ul{quicker} reviews when possible.}
   {egelman2020predicting}
 
-\thought{Insist on code reviews and merges... politely.}
+\lnThought{Insist on code reviews and merges... politely.}
 
-\qte
+\lnQuote
   [\nospell{Marco Ortu}]
   {marco-ortu}
   {Our results show that \ul{valence} (expressed in comments received and posted by a reporter) and \ul{joy} expressed in the comments written by a reporter are linked to a \ul{higher likelihood} of issues to be merged. On the contrary, sadness, anger, and arousal expressed in the comments written by a reporter, and anger, arousal, and dominance expressed in the comments received by a reporter, are linked to a lower likelihood of a pull request to be merged.}
@@ -78,39 +78,39 @@
 \plush{\pptBanner{What is ``valence''?}
 Valence, also known as hedonic tone, is a characteristic of emotions that determines their emotional affect (intrinsic appeal or repulsion). Positive valence corresponds to the "goodness" or attractiveness of an object, event, or situation, making it appealing or desirable. Conversely, negative valence relates to ``badness'' or averseness, rendering something unappealing or undesirable. --- \href{https://en.wikipedia.org/wiki/Valence_(psychology)}{Wikipedia}}
 
-\qte
+\lnQuote
   [\nospell{Rahul Iyer}]
   {rahul-iyer}
   {The larger the difference in \ul{personality traits} between the requester and the closer, the more \ul{positive effect} it has on pull request acceptance.}
   {iyer2019effects}
 
-\qte
+\lnQuote
   [\nospell{Denae Ford}]
   {denae-ford}
   {We observe that both \ul{social} and \ul{technical} aspects are being taken into consideration when deciding upon pull request acceptance. Moreover, we observe that many \ul{more} social aspects are being considered during the experiment than \ul{reported} during the post-experiment survey.}
   {ford2019beyond}
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.9\linewidth]{eyes.png}
-  \source{ford2019beyond}
+  \lnSource{ford2019beyond}
   \par\columnbreak\par
   GitHub is increasing size of the avatar images and emphasizing a developer's ``personal brand'' by spotlighting features such as the contribution heat map. In the future, platform designers must be more mindful in balancing the power of signals that can amplify bias or harm against users, while still providing the mechanisms for users to freely evaluate the merits of potential code contributions.
   \end{multicols}}
 
-\thought{Be a leader and a boss of a pull request --- be the one who cares.}
+\lnThought{Be a leader and a boss of a pull request --- be the one who cares.}
 
-\qte
+\lnQuote
   [\nospell{Jason Tsay}]
   {jason-tsay}
   {We found that the level of a submitter's prior interaction on a project changed how \ul{politely} developers discussed the contribution and the nature of proposed alternative solutions.}
   {tsay2014let}
 
-\thought{Mostly explain ``why'' you make changes, not ``what'' you change}
+\lnThought{Mostly explain ``why'' you make changes, not ``what'' you change}
 
-\pitch{\includegraphics[width=.9\linewidth]{quality-of-prs.png}
-\source{liu2019automatic}}
+\lnPitch{\includegraphics[width=.9\linewidth]{quality-of-prs.png}
+\lnSource{liu2019automatic}}
 
-\pitch{
+\lnPitch{
   \begin{multicols}{2}
   \includegraphics[width=.9\linewidth]{pr.png}
   \par\columnbreak\par
@@ -118,21 +118,21 @@ Valence, also known as hedonic tone, is a characteristic of emotions that determ
   \end{multicols}
 }
 
-\thought{Be prepared for criticism about your style, not functionality.}
+\lnThought{Be prepared for criticism about your style, not functionality.}
 
-\qte
+\lnQuote
   [\nospell{Jacek Czerwonka}]
   {jacek-czerwonka}
   {Only about 15\% of comments provided by reviewers indicate a possible defect, much less a blocking defect. Rather, it is feedback related to the long-term code \ul{maintainability} that comprises a much larger portion of comments provided by reviewers; at least 50\% of all.}
   {czerwonka2015code}
 
-\qte
+\lnQuote
   [\nospell{Valentina Lenarduzzi}]
   {valentina-lenarduzzi}
   {Unexpectedly, quality \ul{flaws} measured by PMD turned out not to affect the acceptance of a pull request at all. As suggested by other works, other factors such as the \ul{reputation} of the maintainer and the \ul{importance} of the delivered feature might be more important than other qualities in terms of pull request acceptance.}
   {lenarduzzi2021does}
 
-\thought[bugayenko2022blog0804]{Commit the code and its tests in different pull requests.}
+\lnThought[bugayenko2022blog0804]{Commit the code and its tests in different pull requests.}
 
 \pptBanner{Test first, fix next}
 \begin{pptWide}{2}
